@@ -1,4 +1,4 @@
-version = "2.2"
+version = "2.2.1-pre"
 
 if __name__ == "__main__":
     print version
